--- a/media.css
+++ b/media.css
@@ -46,16 +46,46 @@ footer{
 }
 
 @media (min-width:400px) and (max-width:800px) {
-    
+
+    .container{
+        width: 90%;
+        height: 100vh;
+        background: rgb(223, 190, 250);
+        margin: auto;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 16% 11% 11% 50% 12%;
+    }
+
+    header{
+        background: rgb(172, 255, 183);
+        width: 100%;
+        display: block;
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    nav{
+        background: rgb(164, 241, 224);
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
     aside{
-        background: rgb(104, 201, 230);
-        grid-column: 1/3;
+        background: rgb(255, 253, 142);
+        grid-column: 1/2;
         grid-row: 3/4;
     }
     main{
-        background: rgb(240, 167, 108);
-        grid-column: 1/3;
+        background: rgb(255, 185, 185);
+        grid-column: 1/2;
         grid-row: 4/5;
+    }
+
+    footer{
+        background: rgb(156, 149, 255);
+        grid-column: 1/2;
+        grid-row: 5/6;
     }
     
 }
